--- a/html/test_02.html
+++ b/html/test_02.html
@@ -1,8 +1,25 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-	<title>ระบบควบคุมอุปกรณ์ไฟฟ้า</titile>
+	<title>ระบบควบคุมอุปกรณ์ไฟฟ้า</title>
 </head>
 <body>
+	<table  border="1">
+	<tr>
+		<td><img src="image_1_1.jpg"></td>
+		<td><img src="image_1_2.jpg"></td>
+		<td><img src="image_1_3.jpg"></td>
+	</tr>
+	<tr>
+		<td><img src="image_2_1.jpg"></td>
+		<td></td>
+		<td><img src="image_2_3.jpg"></td>
+	</tr>
+	<tr>
+		<td><img src="image_3_1.jpg"></td>
+		<td><img src="image_3_2.jpg"></td>
+		<td><img src="image_3_3.jpg"></td>
+	</tr>
+	</table>
 </body>
 </html>
