--- a/html/test_03.html
+++ b/html/test_03.html
@@ -4,10 +4,10 @@
 	<title>ระบบควบคุมอุปกรณ์ไฟฟ้า</title>
 </head>
 <body>
-	<table  border="0">
+	<table  border="0" width="500">
 	<CAPTION>ระบบควบคุมอุปกรณ์ไฟฟ้า (เปิดปิด)</CAPTION>
 	<tr>
-		<td>พัดลม</td>
+		<td width="400">พัดลม</td>
 		<td><button type="button">เปิด</button></td>
 		<td><button type="button">ปิด</button></td>
 	</tr>
