--- a/html/test_03.html
+++ b/html/test_03.html
@@ -3,7 +3,9 @@
 <head>
 	<title>ระบบควบคุมอุปกรณ์ไฟฟ้า</title>
 </head>
-<body>
+<body  bgcolor="#333333">
+	<center>
+	<font color="CCCCCC"><b>
 	<table  border="0" width="500">
 	<CAPTION>ระบบควบคุมอุปกรณ์ไฟฟ้า (เปิดปิด)</CAPTION>
 	<tr>
@@ -22,5 +24,7 @@
 		<td><button type="button">ปิด</button></td>
 	</tr>
 	</table>
+	</b></font>
+	</center>
 </body>
 </html>
