--- a/html/test_03.html
+++ b/html/test_03.html
@@ -4,22 +4,24 @@
 	<title>ระบบควบคุมอุปกรณ์ไฟฟ้า</title>
 </head>
 <body  bgcolor="#333333">
+	<br>
+	<br>
 	<center>
 	<font color="CCCCCC"><b>
 	<table  border="0" width="500">
 	<CAPTION>ระบบควบคุมอุปกรณ์ไฟฟ้า (เปิดปิด)</CAPTION>
 	<tr>
-		<td width="400">พัดลม</td>
+		<td width="400"><img src="fan.jpg"></td>
 		<td><button type="button">เปิด</button></td>
 		<td><button type="button">ปิด</button></td>
 	</tr>
 	<tr>
-		<td>โทรทัศน์</td>
+		<td><img src="tv.png"></td>
 		<td><button type="button">เปิด</button></td>
 		<td><button type="button">ปิด</button></td>
 	</tr>
 	<tr>
-		<td>เครื่องเสียง</td>
+		<td><img src="poweramp.png"></td>
 		<td><button type="button">เปิด</button></td>
 		<td><button type="button">ปิด</button></td>
 	</tr>
